fixed linting warnings (#688)
* fixed linting warnings

* edited themes to coincide with new class names

* Correct kiwi-network-name-option CSS naming

* .u-input-text correct CSS naming

* Input utils using correct CSS class names

* Correct CSS naming fixes

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -26,7 +26,7 @@
     border: 1px solid #ececec;
 }
 
-.kiwi-welcome-simple-form .input-text {
+.kiwi-welcome-simple-form .u-input-text {
     background: #fff;
 }
 
@@ -60,7 +60,7 @@
     color: #000;
 }
 
-.kiwi-welcome-znc .input-text {
+.kiwi-welcome-znc .u-input-text {
     background: #fff;
 }
 
@@ -94,23 +94,23 @@
 }
 
 /* Style all inputs */
-.input-text {
+.u-input-text {
     background: #dedede;
 }
 
-.input-text-label {
+.u-input-text-label {
     color: gray;
 }
 
-.input-text--focus {
+.u-input-text--focus {
     border-color: #42b992;
 }
 
-.input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
 
-.input-text-underline-active {
+.u-input-text-underline-active {
     background: #42b992;
 }
 
@@ -656,7 +656,7 @@
 .kiwi-networksettings input[type='password'],
 .kiwi-networksettings input[type='email'],
 .kiwi-networksettings textarea,
-.kiwi-networksettings .input-text input {
+.kiwi-networksettings .u-input-text input {
     background: rgb(62, 62, 62);
     color: #fff;
 }
@@ -671,7 +671,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.kiwi-networksettings .u-form .input-text {
+.kiwi-networksettings .u-form .u-input-text {
     background: none;
 }
 
@@ -876,7 +876,7 @@
 }
 
 .kiwi-network-name-hover-icon,
-.kiwi-network-name-options .option-button {
+.kiwi-network-name-option {
     color: #dedede;
 }
 
@@ -884,13 +884,13 @@
     background-color: #131312;
 }
 
-.kiwi-network-name-options .option-button:hover,
-.kiwi-network-name-options .option-button.active {
+.kiwi-network-name-option:hover,
+.kiwi-network-name-option.active {
     background-color: #42b992;
     color: #dedede;
 }
 
-.kiwi-network-name-options .kiwi--collapse {
+.kiwi-network-name-option-collapse {
     background: #d16c6c;
 }
 
@@ -981,7 +981,7 @@
     border-left: 3px solid #42b992;
 }
 
-.kiwi-search-channels.active{
+.kiwi-network-name-option-chanfilter.active{
     background: #42b992;
 }
 
@@ -1205,11 +1205,11 @@
     border: 1px solid #a2846e;
 }
 
-.kiwi-customserver-form .input-text {
+.kiwi-customserver-form .u-input-text {
     background-color: #fff;
 }
 
-.kiwi-customserver-form .input-text .input-text-label {
+.kiwi-customserver-form .u-input-text .u-input-text-label {
     color: #42b992;
 }
 
