--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -74,19 +74,19 @@
 }
 
 /*Style all inputs */
-.input-text {
+.u-input-text {
     background: #fff;
 }
-.input-text-label {
+.u-input-text-label {
     color: #6fffb0;
 }
-.input-text--focus {
+.u-input-text--focus {
     border-color: #1b2f24;
 }
-.input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
-.input-text-underline-active {
+.u-input-text-underline-active {
     background: #1b2f24;
 }
 .u-form .u-input,
@@ -762,12 +762,12 @@
 .kiwi-network-name-options {
     background-color: #5dd895;
 }
-.kiwi-network-name-options .option-button:hover,
-.kiwi-network-name-options .option-button.active {
+.kiwi-network-name-option:hover,
+.kiwi-network-name-option.active {
     background-color: #6efdb0;
     color: #fff;
 }
-.kiwi-network-name-options .kiwi--collapse {
+.kiwi-network-name-option-collapse {
     background: #d16c6c;
 }
 
@@ -852,7 +852,7 @@
     color: #fff;
     opacity: 1;
 }
-.kiwi-search-channels.active{
+.kiwi-network-name-option-chanfilter.active{
     background: #1b2f24;
 }
 
@@ -1052,11 +1052,11 @@
     border: 1px solid #6fffb0;
 }
 
-.kiwi-customserver-form .input-text {
+.kiwi-customserver-form .u-input-text {
     background-color: #151414;
 }
 
-.kiwi-customserver-form .input-text input {
+.kiwi-customserver-form .u-input-text input {
     background-color: #151414;
     color: #fff;
 }
