--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -28,12 +28,12 @@
     border: 1px dashed #d86f6f;
 }
 
-.kiwi-welcome-simple .input-text {
+.kiwi-welcome-simple .u-input-text {
     opacity: 1;
     background: none;
 }
 
-.kiwi-welcome-simple .input-text input {
+.kiwi-welcome-simple .u-input-text input {
     color: #fff;
 }
 
@@ -59,7 +59,7 @@
     color: #fff;
 }
 
-.kiwi-welcome-simple .input-text-label {
+.kiwi-welcome-simple .u-input-text-label {
     color: #fff;
 }
 
@@ -109,19 +109,19 @@
 }
 
 /*Style all inputs */
-.input-text {
+.u-input-text {
     background: #adadad;
 }
-.input-text-label {
+.u-input-text-label {
     color: gray;
 }
-.input-text--focus {
+.u-input-text--focus {
     border-color: #000000;
 }
-.input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
-.input-text-underline-active {
+.u-input-text-underline-active {
     background: #000000;
 }
 .u-form .u-input,
@@ -135,11 +135,11 @@
 .u-form label input[type='password'],
 .u-form label input[type='email'],
 .u-form textarea,
-.kiwi-networksettings .input-text input {
+.kiwi-networksettings .u-input-text input {
     border: 1px solid #000000;
 }
 
-.kiwi-networksettings .input-text input {
+.kiwi-networksettings .u-input-text input {
     border: none;
 }
 
@@ -821,12 +821,12 @@
 .kiwi-network-name-options {
     background-color: #000000;
 }
-.kiwi-network-name-options .option-button:hover,
-.kiwi-network-name-options .option-button.active {
+.kiwi-network-name-option:hover,
+.kiwi-network-name-option.active {
     background-color: #6a7b8e;
     color: #adadad;
 }
-.kiwi-network-name-options .kiwi--collapse {
+.kiwi-network-name-option-collapse {
     background: #d16c6c;
     color: #fff;
 }
@@ -907,7 +907,7 @@
 .kiwi-statebrowser-channels  .kiwi-statebrowser-channel .kiwi-statebrowser-channel-name  .kiwi-statebrowser-channel-label {
     background: #d16c6c;
 }
-.kiwi-search-channels.active{
+.kiwi-network-name-option-chanfilter.active{
     background: #000000;
 }
 
@@ -1117,15 +1117,15 @@
     border: 1px solid #adadad;
 }
 
-.kiwi-customserver-form .input-text {
+.kiwi-customserver-form .u-input-text {
     background-color: #000;
 }
 
-.kiwi-customserver .input-text input {
+.kiwi-customserver .u-input-text input {
     color: #fff;
 }
 
-.kiwi-customserver-form .input-text .input-text-label {
+.kiwi-customserver-form .u-input-text .u-input-text-label {
     color: #adadad;
 }
 
@@ -1170,10 +1170,10 @@
 }
 
 /* Nightwatch exclusive fix for network settings labels */
-.kiwi-networksettings .u-form .input-text .input-text-label {
+.kiwi-networksettings .u-form .u-input-text .u-input-text-label {
     margin-left: 0;
 }
-.kiwi-networksettings .u-form .input-text--reveal-value span {
+.kiwi-networksettings .u-form .u-input-text--reveal-value span {
     top: -22px;
     color: #fff;
 }
