--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -20,7 +20,8 @@
 /* Welcome Screen ( Welcome.vue ) */
 .kiwi-welcome-simple-form,
 .kiwi-customserver-form,
-.kiwi-welcome-znc-form {
+.kiwi-welcome-znc-form,
+.kiwi-startbnc-form {
     background-color: #fff;
     color: #000;
     border: 1px solid #ececec;
