- Changed '.kiwi-messagelist-message.kiwi-messagelist-message-notice' to be  '.kiwi-messagelist-message-notice' in the themes.

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -432,7 +432,7 @@
 }
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #3c2828;
 }
 
