--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -385,7 +385,7 @@
 }
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #ffdede;
 }
 
