--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -282,7 +282,7 @@
 }
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #707680;
 }
 
