--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -330,7 +330,7 @@
 }
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #383838;
 }
 
