--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -276,7 +276,7 @@
 }
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #b2dee8;
 }
 
