--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -283,7 +283,7 @@
 
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #e8d4c4;
 }
 
