--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -290,7 +290,7 @@
 }
 
 /* User Notice command */
-.kiwi-messagelist-message.kiwi-messagelist-message-notice {
+.kiwi-messagelist-message-notice {
     background: #ffecec;
 }
 
