Message Info styling (#646)
* - Removing the BR between the ban/kick buttons
- Moving the buttons under neath the link previews, so they will always be at the bottom of the message

* - Completed the HTML changes to the MessageInfo component
- Completed the styling of messageInfo in the default theme

* Added styling for the dark kiwi theme

* Indentation fix

* Adding in Prawnsalad's simple spacing fix.

* - Fixed an alignment issue on mobile for the messageInfo buttons
- Fixed bug with radioactive theme, where opening the kiwi options on mobile would not display correctly ( no background colour)
- Added message info styling to all existing themes

* - Four space indentation fixes to the theme files

* - Removed border bottom from a number of theme files at Prawn's request
- Checked nightswatch, removed border and inversed the 'ban/kick' op button commands bg colour to keep with the theme styling.

* - Fixed an issue with author repeat message info not having the border's on.
- Fixed nightwatch to have a more obvious background colour on the messageInfo when open.

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -414,10 +414,6 @@
     border: #fff;
 }
 
-.kiwi-messagelist-message--info-open {
-    background: #f6f6f6;
-}
-
 .kiwi-messageinfo-urls {
     border-top: 1px solid #ddd;
 }
@@ -618,6 +614,63 @@
 .kiwi-messagelist-message--compact .kiwi-messagelist-message-notice:hover {
     cursor: pointer;
     border-left-color: #80ab52;
+}
+
+
+/* MessageInfo */
+.kiwi-messagelist-message--info-open,
+.kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message--info-open  {
+    background-color: rgb(6, 6, 6);
+    border-top: 1px solid #909090;
+    border-bottom: 1px solid #909090;
+}
+
+/* MessageInfo URLs */
+.kiwi-messageinfo-urls {
+    border-top: 1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.kiwi-messageinfo-url .u-button-secondary {
+    color: #f1f1f1;
+    border: 1px solid #3a3a3a;
+    background: none;
+    text-shadow: none;
+}
+
+.kiwi-messageinfo-urls .kiwi-messageinfo-url:last-of-type {
+    margin-bottom: 0;
+}
+
+/* Start button stying */
+.kiwi-messageinfo-actions .u-link {
+    padding: 5px 10px;
+    text-align: center;
+    border: 1px solid #3a3a3a;
+    color: #f1f1f1;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.kiwi-messageinfo-actions .u-link.kick-user {
+    background: #f6c358;
+    color: #fff;
+}
+
+.kiwi-messageinfo-actions .u-link.ban-user {
+    background: #fcb46e;
+    color: #fff;
+}
+
+@media screen and (max-width: 850px) {
+  .kiwi-messageinfo-actions {
+    text-align: center;
+  }
+  .kiwi-messageinfo-opbuttons {
+    margin-top: 15px;
+    margin-bottom: 5px;
+    width: 100%;
+  }
 }
 
 /* Network Settings ( NetworkSettings.vue ) */
@@ -831,12 +884,6 @@
 
 .kiwi-statebrowser-divider {
     background: rgba(255, 255, 255, 0.3);
-}
-
-.kiwi-messageinfo {
-    background: #f6f6f6;
-    border-bottom: 2px #ddd solid;
-    border-top: 1px #ddd dashed;
 }
 
 .kiwi-statebrowser-usermenu-avatar {
