--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -425,9 +425,7 @@
 .kiwi-messagelist .kiwi-messagelist-body {
     color: #adadad;
 }
-.kiwi-messagelist-message--info-open {
-    background: #f6f6f6;
-}
+
 .kiwi-messageinfo-urls {
     border-top: 1px solid #444;
 }
@@ -534,6 +532,51 @@
 .kiwi-messagelist-message--compact .kiwi-messagelist-message-notice:hover, {
     border-left-color: #80ab52;
 }
+
+
+/* MessageInfo */
+.kiwi-messagelist-message--info-open,
+.kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message--info-open {
+    border-top: 1px solid #585858;
+    border-bottom: 1px solid #585858;
+    background: #131319;
+}
+
+/* MessageInfo URLs */
+.kiwi-messageinfo-urls {
+    border-top: 1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.kiwi-messageinfo-url .u-button-secondary {
+  color: #f1f1f1;
+  border: 1px solid #f1f1f1;
+  background: none;
+  text-shadow: none;
+}
+
+.kiwi-messageinfo-urls .kiwi-messageinfo-url:last-of-type {
+    margin-bottom: 0;
+}
+
+/* Start button stying */
+.kiwi-messageinfo-actions .u-link {
+    padding: 5px 10px;
+    text-align: center;
+    border: 1px solid #f1f1f1;
+    color: #f1f1f1;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.kiwi-messageinfo-actions .u-link.kick-user {
+    color: #f6c358;
+}
+
+.kiwi-messageinfo-actions .u-link.ban-user {
+    color: #fcb46e;
+}
+
 
 /* Network Settings ( NetworkSettings.vue ) */
 .kiwi-networksettings-section {
@@ -756,12 +799,6 @@
 }
 .kiwi-statebrowser-divider {
     background: rgba(255, 255, 255, 0.3);
-}
-
-.kiwi-messageinfo {
-    background: #f6f6f6;
-    border-bottom: 2px #ddd solid;
-    border-top: 1px #ddd dashed;
 }
 
 .kiwi-statebrowser-usermenu-avatar {
