changed class names, moved color styles to themes, refactored to not require \!important directives

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -276,6 +276,19 @@
     border-right-color: #ddd;
 }
 
+.kiwi-container-arrow_box::before {
+    border-right-color: #42b983;
+}
+
+.kiwi-container-arrow_box--highlight::before {
+    border-right-color: #d62323;
+}
+
+.kiwi-container-toggledraw-statebrowser-messagecount--highlight {
+    background-color: #d62323;
+    color: #fff;
+}
+
 /* Sidebar uservue colouring */
 .kiwi-userbox,
 .kiwi-userbox-usermask {
@@ -1042,7 +1055,7 @@
     color: #dedede;
 }
 
-.kiwi-statebrowser-channel-label.kiwi-statebrowser-channel-label--highlight {
+.kiwi-statebrowser-channel-label .kiwi-statebrowser-channel-label--highlight {
     background: #d62323;
 }
 
