--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -243,6 +243,19 @@
     color: #fff;
 }
 
+.kiwi-container-arrow_box::before {
+    border-right-color: #42b983;
+}
+
+.kiwi-container-arrow_box--highlight::before {
+    border-right-color: #d62323;
+}
+
+.kiwi-container-toggledraw-statebrowser-messagecount--highlight {
+    background-color: #d62323;
+    color: #fff;
+}
+
 .kiwi-container-toggledraw-statebrowser-messagecount::after {
     border: 0.6em solid transparent;
     border-right-color: #444;
