--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -533,11 +533,11 @@
     border-radius: 3px;
 }
 
-.kiwi-messageinfo-actions .u-link.kick-user {
+.kiwi-messageinfo-actions .kiwi-messageinfo-kick-user {
     color: #6fffb0;
 }
 
-.kiwi-messageinfo-actions .u-link.ban-user {
+.kiwi-messageinfo-actions .kiwi-messageinfo-ban-user {
     color: #6fffb0;
 }
 
