--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -232,27 +232,14 @@
     color: #b8babd;
 }
 
-/* These styles relate to the 'unread messages' and 'Mentioned' highlights that display to the user in the Statebrowser sidebar */
-.kiwi-container-toggledraw-statebrowser-messagecount {
-    background-color: #42b983;
-    color: #fff;
-}
-
 .kiwi-statebrowser-channel-label.kiwi-statebrowser-channel-label--highlight {
     background: #d16c6c;
     color: #fff;
 }
 
-.kiwi-container-arrow_box::before {
-    border-right-color: #42b983;
-}
-
-.kiwi-container-arrow_box--highlight::before {
-    border-right-color: #d62323;
-}
-
-.kiwi-container-toggledraw-statebrowser-messagecount--highlight {
-    background-color: #d62323;
+/* These styles relate to the 'unread messages' and 'Mentioned' highlights that display to the user in the Statebrowser sidebar */
+.kiwi-container-toggledraw-statebrowser-messagecount {
+    background-color: #444;
     color: #fff;
 }
 
@@ -260,8 +247,14 @@
     border: 0.6em solid transparent;
     border-right-color: #444;
 }
+
+.kiwi-container-toggledraw-statebrowser-messagecount--highlight {
+    background-color: #d62323;
+    color: #fff;
+}
+
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
-    border-right-color: #444;
+    border-right-color: #d62323;
 }
 
 .kiwi-container-empty .u-button {
