added arrow styling to unread counter in mobile view, fixed conditional coloring, added brief shaking animation @ highlight. closes #694 (#732)
added arrow styling to unread counter in mobile view, fixed conditional coloring, added brief shaking animation @ highlight. closes #694

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -273,7 +273,16 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount::after {
     border: 0.6em solid transparent;
-    border-right-color: #ddd;
+    border-right-color: #42b983;
+}
+
+.kiwi-container-toggledraw-statebrowser-messagecount--highlight {
+    background-color: #d62323;
+    color: #fff;
+}
+
+.kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
+    border-right-color: #d62323;
 }
 
 /* Sidebar uservue colouring */
@@ -1089,7 +1098,7 @@
     color: #dedede;
 }
 
-.kiwi-statebrowser-channel-label.kiwi-statebrowser-channel-label--highlight {
+.kiwi-statebrowser-channel-label .kiwi-statebrowser-channel-label--highlight {
     background: #d62323;
 }
 
