--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -270,7 +270,6 @@
     background-color: #42b983;
     color: #fff;
 }
-
 .kiwi-container-toggledraw-statebrowser-messagecount::after {
     border: 0.6em solid transparent;
     border-right-color: #42b983;
@@ -283,6 +282,11 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
     border-right-color: #d62323;
+}
+
+.kiwi-container-empty .u-button {
+    background-color: #747c88;
+    color: #fff;
 }
 
 /* Sidebar uservue colouring */
@@ -421,6 +425,10 @@
     backround: #363636;
     color: #fff;
     border: #fff;
+}
+
+.kiwi-messagelist-message--info-open {
+    background: #f6f6f6;
 }
 
 .kiwi-messageinfo-urls {
@@ -623,63 +631,6 @@
 .kiwi-messagelist-message--compact .kiwi-messagelist-message-notice:hover {
     cursor: pointer;
     border-left-color: #80ab52;
-}
-
-
-/* MessageInfo */
-.kiwi-messagelist-message--info-open,
-.kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message--info-open  {
-    background-color: rgb(6, 6, 6);
-    border-top: 1px solid #909090;
-    border-bottom: 1px solid #909090;
-}
-
-/* MessageInfo URLs */
-.kiwi-messageinfo-urls {
-    border-top: 1px solid #3a3a3a;
-    border-bottom: 1px solid #3a3a3a;
-}
-
-.kiwi-messageinfo-url .u-button-secondary {
-    color: #f1f1f1;
-    border: 1px solid #3a3a3a;
-    background: none;
-    text-shadow: none;
-}
-
-.kiwi-messageinfo-urls .kiwi-messageinfo-url:last-of-type {
-    margin-bottom: 0;
-}
-
-/* Start button stying */
-.kiwi-messageinfo-actions .u-link {
-    padding: 5px 10px;
-    text-align: center;
-    border: 1px solid #3a3a3a;
-    color: #f1f1f1;
-    display: inline-block;
-    border-radius: 3px;
-}
-
-.kiwi-messageinfo-actions .kiwi-messageinfo-kick-user {
-    background: #f6c358;
-    color: #fff;
-}
-
-.kiwi-messageinfo-actions .kiwi-messageinfo-ban-user {
-    background: #fcb46e;
-    color: #fff;
-}
-
-@media screen and (max-width: 850px) {
-  .kiwi-messageinfo-actions {
-    text-align: center;
-  }
-  .kiwi-messageinfo-opbuttons {
-    margin-top: 15px;
-    margin-bottom: 5px;
-    width: 100%;
-  }
 }
 
 /* Network Settings ( NetworkSettings.vue ) */
@@ -893,6 +844,12 @@
 
 .kiwi-statebrowser-divider {
     background: rgba(255, 255, 255, 0.3);
+}
+
+.kiwi-messageinfo {
+    background: #f6f6f6;
+    border-bottom: 2px #ddd solid;
+    border-top: 1px #ddd dashed;
 }
 
 .kiwi-statebrowser-usermenu-avatar {
