fixed missing styling (#749)
* fixed missing styling

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1098,10 +1098,9 @@
     color: #dedede;
 }
 
-.kiwi-statebrowser-channel-label .kiwi-statebrowser-channel-label--highlight {
+.kiwi-statebrowser-channel-label--highlight {
     background: #d62323;
 }
-
 
 .kiwi-statebrowser-channel-popup {
     background: #383838;
