- Reposition the messagecount - Apply messagecount new styling to all theem files - remove close button from statebrowser, as it is no longer needed.

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -257,6 +257,12 @@
     border-right-color: #d62323;
 }
 
+/* Style the statebrowser's ::after element on mobile devices */
+.kiwi-wrap--statebrowser-drawopen .kiwi-container-toggledraw-statebrowser-messagecount::after {
+    border: 0.6em solid transparent;
+    border-left-color: #42b983;
+}
+
 .kiwi-container-empty .u-button {
     background-color: #000000;
     color: #adadad;
