--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -230,6 +230,12 @@
     border-right-color: #d62323;
 }
 
+/* Style the statebrowser's ::after element on mobile devices */
+.kiwi-wrap--statebrowser-drawopen .kiwi-container-toggledraw-statebrowser-messagecount::after {
+    border: 0.6em solid transparent;
+    border-left-color: #42b983;
+}
+
 .kiwi-statebrowser-channel-label--highlight {
     background: #e45e5e;
 }
