Styling + inline realname

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -594,7 +594,7 @@
     background-color: #333;
 }
 
-.kiwi-messagelist-time {
+.kiwi-messagelist-time, .kiwi-messagelist-realname {
     color: #a0a09f;
 }
 
