--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -385,7 +385,7 @@
 .kiwi-messagelist-nick {
     color: #000;
 }
-.kiwi-messagelist-time {
+.kiwi-messagelist-time, .kiwi-messagelist-realname {
     color: #a0a09f;
 }
 
