--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -406,7 +406,7 @@
 .kiwi-messagelist-nick {
     color: #000;
 }
-.kiwi-messagelist-time {
+.kiwi-messagelist-time, .kiwi-messagelist-realname {
     color: #a0a09f;
 }
 
