--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -487,7 +487,7 @@
     color: #6fffb0 !important;
 }
 
-.kiwi-messagelist-time {
+.kiwi-messagelist-time, .kiwi-messagelist-time {
     color: #6fffb0;
 }
 
