--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -289,24 +289,20 @@
 
 
 /* baseline styling for the 'topic' of the channel, if it has one, these are shared between traditional and modern view, but can be made more specific if need be */
-.kiwi-messagelist-message.kiwi-messagelist-message-topic {
-    border-top: 1px solid #6fffb0;
-    border-bottom: 1px solid #6fffb0;
+.kiwi-message-topic {
+    border: 1px solid #6fffb0;
 }
-.kiwi-messagelist-message--modern.kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message-topic {
-    border-top: 1px solid #6fffb0;
+
+.kiwi-messagelist--modern .kiwi-message-topic {
+    border: 2px solid #42b992;
 }
-.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic {
-    border: 2px solid #6fffb0;
-}
-.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic.kiwi-messagelist-message--unread {
-    border-left: 2px solid #6fffb0;
-}
+
 .kiwi-header-buffersettings {
-    border-top: 1px solid #6fffb0;
+    border-top: 1px solid #ddd;
 }
+
 .kiwi-header-topic > div {
-    color: #6fffb0;
+    color: #22231f;
 }
 
 
