--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1,8 +1,8 @@
 /*
-    Theme Name: Default
-    Theme Desc: This is the default theme for Kiwi IRC.
+    Theme Name: Dark
+    Theme Desc: This is the dark (standard) theme.
     Author: @prawnSalad
-    Edited: @allanOcelot // 06/01/2019
+    Edited: @allanOcelot // 21/01/2019
 */
 
 :root {
