--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -243,8 +243,12 @@
 .kiwi-header {
     background: #fff;
 }
-.kiwi-header-name {
+.kiwi-header-name-container {
     color: #22231f;
+}
+
+.kiwi-header-name {
+    background-color: #fff;
 }
 
 /* The header option buttons */
