--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -545,21 +545,17 @@
 
 /* Nicklist ( Nicklist.vu ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
     border-left: 4px solid #fff;
 }
+.kiwi-nicklistmessageuser {
+    color: #b3b3b3;
+}
 .kiwi-nicklist-user:hover {
     border-left: 4px solid #42b992;
 }
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick i {
-    color: #fff !important;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
-    color: #fff;
-}
-
 .kiwi-nicklist-info i.fa-search {
     color: #cfcfcf;
 }
