--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -661,42 +661,21 @@
   background: #000000;
 }
 
-/* Nicklist ( Nicklist.vu ) */
+/* Nicklist ( Nicklist.vue ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-.kiwi-nicklist-info input {
-    color: #efefef;
-}
-
-.kiwi-nicklist-info .fa.fa-search{
-    color: #efefef;
-}
-.kiwi-nicklist-user {
-    border-top: 1px solid #858585;
-}
-.kiwi-nicklist-user:first-of-type {
-    border-top: none;
-}
-.kiwi-nicklist-user:hover {
-    background-color: #000000;
-    cursor: pointer;
-    color: #adadad;
-}
-.kiwi-nicklist-user:after {
-    color: #666764;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
-    color: #adadad !important;
+    border-left: 4px solid #1b1b1b;
 }
 .kiwi-nicklist-messageuser {
-    color: #e2e2e2;
+    color: #adadad;
+}
+.kiwi-nicklist-user:hover {
+    border-left: 4px solid #adadad;
 }
 .kiwi-nicklist-info i.fa-search {
-    color: #cfcfcf;
+    color: #adadad;
 }
 
 .kiwi-aboutbuffer {
