--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -609,42 +609,21 @@
   background: #4d6075;
 }
 
-/* Nicklist ( Nicklist.vu ) */
+/* Nicklist ( Nicklist.vue ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.kiwi-nicklist-info input {
-    background-color: #fff;
-    color: #000;
-}
-.kiwi-nicklist-user {
-    border-top: 1px solid #858585;
-}
-.kiwi-nicklist-user:first-of-type {
-    border-top: none;
-}
-.kiwi-nicklist-user:hover {
-    background-color: #4d6075;
-    cursor: pointer;
-    color: #fff;
-}
-.kiwi-nicklist-user:after {
-    color: #666764;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick i {
-    color: #fff !important;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
-    color: #fff;
+    border-left: 4px solid #fff;
 }
 .kiwi-nicklist-messageuser {
-    color: #e2e2e2;
+    color: #212d3a;
+}
+.kiwi-nicklist-user:hover {
+    border-left: 4px solid #212d3a;
 }
 .kiwi-nicklist-info i.fa-search {
-    color: #cfcfcf;
+    color: #adadad;
 }
 
 /* Not connected message ( NotConnected.vue ) */
