--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -609,63 +609,24 @@
   background: #1b2f24;
 }
 
-/* Nicklist ( Nicklist.vu ) */
-.kiwi-nicklist {
-    background-color: #1b2f24;
-    color: #5dd895;
+/* Nicklist ( Nicklist.vue ) */
+.kiwi-nicklist-usercount {
+    border-bottom: 1px solid #e4e4e44d;
 }
-
-.kiwi-nicklist .kiwi-nicklist-user-nick {
-    color: #5dd895 !important;
-}
-
-.kiwi-nicklist-usercount,
 .kiwi-nicklist-user {
-    border-bottom: 1px solid #6fffb0;
+    border-left: 4px solid #192e24;
 }
-
-.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
-    color: #6fffb0;
-}
-
-.kiwi-nicklist-info input,
-.kiwi-nicklist-info input::placeholder,
-.kiwi-nicklist-info input::-webkit-input-placeholder,
-.kiwi-nicklist-info input::-moz-placeholder,
-.kiwi-nicklist-info input:-ms-input-placeholder,
-.kiwi-nicklist-info input:-moz-placeholder {
-  color: #5dd895;
-}
-
-.kiwi-nicklist-info .fa.fa-search {
-    color: #5dd895;
-}
-
-.kiwi-nicklist-user {
-    border-top: 1px solid #858585;
-}
-.kiwi-nicklist-user:first-of-type {
-    border-top: none;
-}
-.kiwi-nicklist-user:hover {
-    background-color: #53926f;
-    cursor: pointer;
-    text-decoration: underline;
-}
-.kiwi-nicklist-user:after {
-    color: #666764;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick i {
-    color: #fff !important;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
-    color: #fff;
+.kiwi-nicklist-user .kiwi-nicklist-user-nick {
+    color: #6fffb0 !important;  
 }
 .kiwi-nicklist-messageuser {
-    color: #e2e2e2;
+    color: #6fffb0;
+}
+.kiwi-nicklist-user:hover {
+    border-left: 4px solid #6fffb0;
 }
 .kiwi-nicklist-info i.fa-search {
-    color: #cfcfcf;
+    color: #6fffb0;
 }
 
 /* Not connected message ( NotConnected.vue ) */
