Update: Messagecount styled to act as open/close button for statebrowser (#750)
* - Reposition the messagecount
- Apply messagecount new styling to all theem files
- remove close button from statebrowser, as it is no longer needed.

* - Remove the background of  the toggle statebrowser
- Remove the border-right of the toggle statebrowser

* - Wrapped the notification count in span class
- Added in a font awesome 'close' icon that shows on mobile
- Added in CSS for the previously mentioned span's

* - Realigned the settings Icon (statebrowser)
- Removed background colour on hover from all the theme files.

* - Tweaked the position of the ::after element

* - Remove the Z-index of kiwi-container-toggledraw-statebrowser if the sidebar is open on mobile devices

* - Lint fix

* - Listend to prawnsalad's good suggstion again
- Removed the z-index change to container.vue
- Added a z-index of 100 to sidebar, because nothing should ever go ontop of the sidebar

* - Clicking on the 'Channel Settings' when in mobile view will now close the statebrowser and take the user to the channel settings

* Linting fixes

* - Replaced window.innerWidth with ui.is_narrow
- Changed Z-index of css elements
- Small style tweaks

* - Specify z-index of 0s on the messageCount
- Reduce Transition of the stateBrowser open to 0.2s from 0.3s

* - Tweaked the animation of the statebrowser and messageCount to be much smoother

* - Animation timing tweaks

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -253,10 +253,6 @@
     color: #dedede;
 }
 
-.kiwi-container-toggledraw-statebrowser {
-    background: #1e1e1e;
-    border-right: 1px solid #ddd;
-}
 
 .kiwi-container-toggledraw-sidebar {
     border-left: 1px solid #ddd;
@@ -283,6 +279,12 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
     border-right-color: #d62323;
+}
+
+/* Style the statebrowser's ::after element on mobile devices */
+.kiwi-wrap--statebrowser-drawopen .kiwi-container-toggledraw-statebrowser-messagecount::after {
+    border: 0.6em solid transparent;
+    border-left-color: #42b983;
 }
 
 /* Sidebar uservue colouring */
@@ -921,7 +923,6 @@
 
 /* User Settings */
 .kiwi-statebrowser-appsettings:hover {
-    background: #42b992;
     color: #fff;
     opacity: 1;
 }
