--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -192,10 +192,6 @@
     color: #fff;
 }
 
-.kiwi-container-toggledraw-statebrowser {
-    border-right: 1px solid #ddd;
-}
-
 .kiwi-container-toggledraw-sidebar {
     border-left: 1px solid #ddd;
 }
@@ -220,6 +216,12 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
     border-right-color: #d62323;
+}
+
+/* Style the statebrowser's ::after element on mobile devices */
+.kiwi-wrap--statebrowser-drawopen .kiwi-container-toggledraw-statebrowser-messagecount::after {
+    border: 0.6em solid transparent;
+    border-left-color: #42b983;
 }
 
 .kiwi-statebrowser-channel-label--highlight {
@@ -759,7 +761,6 @@
 
 /* User Settings */
 .kiwi-statebrowser-appsettings:hover {
-    background: #a2846e;
     color: #fff;
     opacity: 1;
 }
