--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -189,9 +189,6 @@
     color: #fff;
 }
 
-.kiwi-container-toggledraw-statebrowser {
-    border-right: 1px solid #ddd;
-}
 .kiwi-container-toggledraw-sidebar {
     border-left: 1px solid #ddd;
 }
@@ -216,6 +213,12 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
     border-right-color: #d62323;
+}
+
+/* Style the statebrowser's ::after element on mobile devices */
+.kiwi-wrap--statebrowser-drawopen .kiwi-container-toggledraw-statebrowser-messagecount::after {
+    border: 0.6em solid transparent;
+    border-left-color: #42b983;
 }
 
 .kiwi-statebrowser-channel-label--highlight {
@@ -790,7 +793,6 @@
     color: #6fffb0;
 }
 .kiwi-statebrowser-appsettings:hover {
-    background: #1b2f24;
     color: #fff;
     opacity: 1;
 }
