--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -187,9 +187,6 @@
     color: #fff;
 }
 
-.kiwi-container-toggledraw-statebrowser {
-    border-right: 1px solid #ddd;
-}
 .kiwi-container-toggledraw-sidebar {
     border-left: 1px solid #ddd;
 }
@@ -214,6 +211,12 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
     border-right-color: #d62323;
+}
+
+/* Style the statebrowser's ::after element on mobile devices */
+.kiwi-wrap--statebrowser-drawopen .kiwi-container-toggledraw-statebrowser-messagecount::after {
+    border: 0.6em solid transparent;
+    border-left-color: #42b983;
 }
 
 .kiwi-statebrowser-channel-label--highlight {
@@ -746,7 +749,6 @@
 
 /* User Settings */
 .kiwi-statebrowser-appsettings:hover {
-    background: #78c9dc;
     color: #fff;
     opacity: 1;
 }
