Removing boxy nicklist styling (#795)
* - Spacing of nicklist filter updated
- Reduced size of nicklist items
- Updated the styling of the nicklist items in the nicklistsidebar

* - Added animation to the 'messageuser' icon
- Changed default theme colour scheme for the nicklistuser + hover

* - Dark theme colours updated

* - Updated coffee theme

* - Updated theme grayfox

* - Update theme nightswatch

* - Update theme osprey

* - Updated theme radioactive

* - Updated theme sky

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -785,50 +785,19 @@
     background: #42b992;
 }
 
-/* Nicklist ( Nicklist.vu ) */
+/* Nicklist ( Nicklist.vue ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-left: 4px solid #1e1e1e;
 }
-
-.kiwi-nicklist-info input {
-    background-color: #fff;
-    color: #000;
-    font-weight: normal;
-}
-
-.kiwi-nicklist-user {
-    border-top: 1px solid #858585;
-}
-
-.kiwi-nicklist-user:first-of-type {
-    border-top: none;
-}
-
-.kiwi-nicklist-user::after {
-    color: #666764;
-}
-
-.kiwi-nicklist-user:hover {
-    background-color: none;
-    cursor: pointer;
-    color: #fff;
-}
-
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick {
-    color: #fff !important;
-}
-
-.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
-    color: #fff;
-}
-
 .kiwi-nicklist-messageuser {
-    color: #666764;
+    color: #5d5d5d;
 }
-
+.kiwi-nicklist-user:hover {
+    border-left: 4px solid #42b992;
+}
 .kiwi-nicklist-info i.fa-search {
     color: #cfcfcf;
 }
