--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -548,27 +548,16 @@
 
 /* Nicklist ( Nicklist.vu ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-left: 4px solid #fff;
+}
+.kiwi-nicklistmessageuser {
+    color: #b3b3b3;
 }
 .kiwi-nicklist-user:hover {
-    background-color: #42b992;
-    cursor: pointer;
-    color: #fff;
-}
-.kiwi-nicklist-user:after {
-    color: #666764;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick i {
-    color: #fff !important;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
-    color: #fff;
-}
-.kiwi-nicklist-messageuser {
-    color: #666764;
+    border-left: 4px solid #42b992;
 }
 .kiwi-nicklist-info i.fa-search {
     color: #cfcfcf;
