--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -607,35 +607,18 @@
   background: #747c88;
 }
 
-/* Nicklist ( Nicklist.vu ) */
+/* Nicklist ( Nicklist.vue ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.kiwi-nicklist-user {
-    border-top: 1px solid #858585;
-}
-.kiwi-nicklist-user:first-of-type {
-    border-top: none;
-}
-.kiwi-nicklist-user:hover {
-    background-color: #747c88;
-    cursor: pointer;
-    color: #fff;
-}
-.kiwi-nicklist-user:after {
-    color: #666764;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
-    color: #fff !important;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
-    color: #fff;
+    border-left: 4px solid #fff;
 }
 .kiwi-nicklist-messageuser {
-    color: #e2e2e2;
+    color: #687282;
+}
+.kiwi-nicklist-user:hover {
+    border-left: 4px solid #687282;
 }
 .kiwi-nicklist-info i.fa-search {
     color: #cfcfcf;
