--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -590,36 +590,21 @@
   background: #78c9dc;
 }
 
-/* Nicklist ( Nicklist.vu ) */
+/* Nicklist ( Nicklist.vue ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid #e4e4e44d;
 }
 .kiwi-nicklist-user {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.kiwi-nicklist-info input {
-    background-color: #fff;
-    color: #000;
-}
-.kiwi-nicklist-user {
-    border-top: 1px solid #858585;
-}
-.kiwi-nicklist-user:first-of-type {
-    border-top: none;
-}
-.kiwi-nicklist-user:hover {
-    cursor: pointer;
-    color: #fff !important;
-}
-.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser,
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick {
-    color: #4dafc5 !important;
+    border-left: 4px solid #fff;
 }
 .kiwi-nicklist-messageuser {
-    color: #e2e2e2;
+    color: #4dafc5;
+}
+.kiwi-nicklist-user:hover {
+    border-left: 4px solid #4dafc5;
 }
 .kiwi-nicklist-info i.fa-search {
-    color: #cfcfcf;
+    color: #e1e1e1;
 }
 
 /* Not connected message ( NotConnected.vue ) */
