- Updated theme coffee

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -361,8 +361,7 @@
 
 /* AutoComplete - If the user has enabled autocomplete in their options, this will style the options (AutoComplete.vue) */
 .kiwi-autocomplete {
-    box-shadow: 0 1px 15px rgba(64, 54, 63, 0.25);
-    border: 1px solid #ccc;
+    border-top: 2px solid #ccc;
     background: #fff;
 }
 .kiwi-autocomplete-item {
